--- a/unit1.css
+++ b/unit1.css
@@ -33,14 +33,25 @@ body {
                 ),
                 linear-gradient(to bottom, var(--pale-yellow) 0%, var(--sky-blue) 100%);
     color: #2c3e50;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     min-height: 100vh;
+    width: 100%;
 }
 
 
-/* --------------------------------- All the buttons --------------------------------- */
+/* typograpghy */
+h1 {
+    color: #3498db;
+    margin-bottom: 6px;
+    font-size: 2.4rem;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 14px;
+    text-shadow: 3px 3px 0 white;
+}
+
+/* buttons */
 button {
     color: white;
     border: none;
@@ -68,22 +79,16 @@ button:disabled {
     box-shadow: none;
 }
 
-/* --------------------------------- Hero-image --------------------------------- */
-.hero-bg {
-    width: 100%;
+
+/* header */
+header {
     background-image: url("cloud.png");
     background-size: cover;
     background-position: center 18%;
 }
 
-
-/* --------------------------------- Header --------------------------------- */
-.header {
-    width: 100%;
+.header-box {
     padding-top: 15px;
-    position: relative;
-    display: flex;
-    align-items: center;
 }
 
 .profile-box {
@@ -129,20 +134,6 @@ button:disabled {
     z-index: 1;
 }
 
-h1 {
-    color: #3498db;
-    margin-bottom: 6px;
-    font-size: 2.4rem;
-    font-weight: bolder;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
-    text-shadow: 3px 3px 0 white;
-}
-
-
-/* --------------------------------- Mode Selector --------------------------------- */
 .mode-selector {
     gap: 16px;
     margin-top: 40px;
@@ -227,8 +218,7 @@ h1 {
 }
 
 
-
-/* --------------------------------- Page selector --------------------------------- */
+/* page selector */
 .controls {
     display: flex;
     justify-content: space-between;
