--- a/unit.css
+++ b/unit.css
@@ -2,9 +2,9 @@
     --primary-orange: #f68c32;
     --primary-blue: #7cd3f6;  
     --primary-green: #c3c978;
-    --primary-pink: #f5a3aa; 
+    --primary-pink: #ffdae0; 
     --primary-black: #1a1c1b; 
-    --primary-yellow: #f9fbe6; 
+    --primary-yellow: #fff2cc; 
     --primary-red: #ee877e;
     --light-yellow: #fef9f5;
     --light-blue: #d6eaff;
@@ -15,7 +15,6 @@
     --light-pink: #ff99c8;
     --pale-yellow:   /* ✅ */
     --border-color: #bcdffc; 
-    --text-orange: #a65d3b;
     --primary-purple: #B647E7; /* ✅ */
 }
 
@@ -35,7 +34,7 @@ body {
 
 .container {
     padding: 20px;
-    margin: 40px 30px 50px 30px;
+    margin: 20px 30px 40px 30px;
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -131,9 +130,7 @@ button {
     background: var(--primary-green);
 }
 
-.learn-mode-label {
-    background: var(--primary-blue);
-}
+
 
 .read-mode-label {
     background: var(--primary-orange);
@@ -148,8 +145,9 @@ button {
 }
 
 /* 3. main image */
-.main-img {
+.img-container {
     margin: 30px 30px 10px 30px;
+    position: relative; 
 }
 
 .page-image {
@@ -157,6 +155,19 @@ button {
     border-radius: 20px;
 }
 
+.hotmap-layer {
+    position: absolute;
+    inset: 0; 
+}
+
+.hotspot {
+    position: absolute;
+    cursor: pointer;
+}
+
+.hotspot:hover, .hotspot:focus {
+    border: 2px dashed var(--primary-orange);
+}
 
 /* 4. page selector */
 .controls {
@@ -169,6 +180,13 @@ button {
     margin-right: auto;
 }
 
+.page-control button {
+    background: var(--primary-pink); 
+    border: 3px solid #fff; 
+    color: #d84315; 
+    border-radius: 25px; 
+}
+
 .prev-page-btn {
     background: var(--light-orange);
 }
@@ -178,7 +196,13 @@ button {
 }
 
 .page-indicator {
-    margin-left: auto;
+    background:  var(--primary-yellow); 
+    padding: 8px 20px; 
+    border-radius: 20px; 
+    color: #f9a825; 
+    font-weight: 900; 
+    font-size: 18px; 
+    border: 3px solid #fff; 
 }
 
 .page-indicator i {
