--- a/unit.css
+++ b/unit.css
@@ -3,7 +3,7 @@
     --primary-blue: #7cd3f6;  
     --primary-green: #c3c978;
     --primary-pink: #ffdae0; 
-    --primary-black: #1a1c1b; 
+    --primary-brown: #5d4037; 
     --primary-yellow: #fff2cc; 
     --primary-red: #ee877e;
     --light-yellow: #fef9f5;
@@ -18,18 +18,17 @@
     --primary-purple: #B647E7; /* ✅ */
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Comic Neue', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 body {
+    margin: 0;
     background: var(--light-blue);
-    color: #282828;
-    font-size: 20px;
+    color: var(--primary-brown);
+    font-size: 1rem;
+    font-weight: 600;
     text-align: center;
+    font-family: "Huninn", "Comic Sans MS";
+    box-sizing: border-box;
+    
 }
 
 .container {
@@ -41,27 +40,27 @@ body {
     border: 3px solid var(--light-blue);
 }
 
-/* typograpghy */
-
-p,
-span {
-    color: var(--primary-black);
-    font-size: 1rem;
-}
 
 /* buttons */
 button {
     border: none;
-    padding: 12px 24px;
+    padding: 0.5em 1em;
     border-radius: 12px;
     cursor: pointer;
     font-size: 1rem;
     font-weight: 600;
+
 }
 
 
 /* layout */
 /* 1. header */
+header {
+    display: flex;
+    align-items: center;
+    background: var(--light-orange)
+}
+
 .header-box {
     display: flex;
     align-items: center;
@@ -87,6 +86,13 @@ button {
 }
 
 
+nav ul {
+    list-style: none; 
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+
 /* 2. title */
 .title {
     padding: 20px 50px;
@@ -94,55 +100,8 @@ button {
 
 
 /* 3. mode selector */
-.mode-selector {
-    gap: 16px;
-}
-
-.mode-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-
-.mode-buttons input[type="radio"] {
-    display: none;
-}
-
-.mode-buttons label {
-    padding: 12px 22px;
-    border-radius: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    box-shadow: 0 6px 14px #0000001F;
-}
-
-.mode-label:hover, .mode-label:focus {
-    transform: scale(1.05);     
-}
-
-.mode-buttons input[type="radio"]:checked + label {
-    outline: 3px solid white;
-}
-
-.listen-mode-label {
-    background: var(--primary-green);
-}
 
 
-
-.read-mode-label {
-    background: var(--primary-orange);
-}
-
-.show-mode-label {
-    background: var(--primary-pink);
-}
-
-.translate-checkbox {
-    display: none; 
-}
 
 /* 3. main image */
 .img-container {
@@ -165,19 +124,31 @@ button {
     cursor: pointer;
 }
 
+
 .hotspot:hover, .hotspot:focus {
     border: 2px dashed var(--primary-orange);
 }
 
+.tranlation-layer {
+    position: absolute;
+    background: white;
+    border: 3px solid var(--primary-pink);
+    border-radius: 10px; 
+    padding: 0.5em 1em; 
+
+}
+
 /* 4. page selector */
 .controls {
-    display: flex;
-    align-items: center;
     margin: 0 30px;
 }
 
 .page-control {
     margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:1em; 
 }
 
 .page-control button {
@@ -197,11 +168,9 @@ button {
 
 .page-indicator {
     background:  var(--primary-yellow); 
-    padding: 8px 20px; 
+    padding: 0.5em 1em; 
     border-radius: 20px; 
     color: #f9a825; 
-    font-weight: 900; 
-    font-size: 18px; 
     border: 3px solid #fff; 
 }
 
